Text styles section added and styling done

--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,45 @@ section {
 .poppins {
   font-family: "Poppins", sans-serif;
 }
+
+.text-box {
+  border-bottom: 1px dashed;
+  margin-bottom: 1rem;
+}
+
+.text-box:last-child {
+  border: none;
+}
+
+.text-box ul {
+  padding-left: 2rem;
+  font-size: 16px;
+  margin: 1rem auto;
+}
+
+.text-box h1 {
+  font-size: 26px;
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: bold;
+  border-left: 5px solid #2d5dcc;
+  background: #efefef;
+  padding: 1rem;
+}
+
+.text-box h2 {
+  font-size: 18px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  border-left: 5px solid #2d5dcc;
+  background: #efefef;
+  padding: 1rem;
+}
+
+.text-box p {
+  font-size: 14px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  border-left: 5px solid #2d5dcc;
+  background: #efefef;
+  padding: 1rem;
+}
